--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@truffle/hdwallet-provider": "^1.2.0",
     "chai": "^4.2.0",
     "dotenv": "^8.2.0",
+    "fs": "0.0.1-security",
     "mocha": "^8.2.1",
+    "path": "^0.12.7",
     "truffle": "^5.1.56",
     "truffle-flattener": "^1.5.0",
     "web3": "^1.3.0"
